fixed spacing fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+#planned-div {
+    padding-top: 1%;
+    margin-bottom: -3%;
+}
+
 @media only screen and (min-width: 800px) {
     .column {
         display: flex;
